--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  00 Home
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
+    <title>Frontend Mentor | Space tourism website</title>
+  </head>
+  <body>
+    <button class="love">Click Me (Stir's Only!)</button>
+    <div class="message hidden">
+      Secret msg for my favorite person in the world: I love you Tiny Stan :)
+    </div>
+
+    <!-- 00 Home
   01 Destination
   02 Crew
   03 Technology
@@ -21,7 +32,6 @@
   outer space and not hover kind of on the edge of it. Well sit back, and relax 
   because we’ll give you a truly out of this world experience!
 
-  Explore
-
-</body>
+  Explore -->
+  </body>
 </html>
